--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email:
 description: >- # this means to ignore newlines until "baseurl:"
 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "nallelyalcaraz.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "nallely" # the base hostname & protocol for your site, e.g. http://example.com
 
 
 # Build settings
